# ejercicios-2018-ZackaryWelch

./: .gitignore  CMakeLists.txt
Estructuras/: main.cpp
Estructuras/Cola/: Cola.h
Estructuras/Lista/: Lista.h  nodo.h
Estructuras/Pila/: Pila.h
U00_Repaso/Ej-01/: Circulo.cpp  Circulo.h  Color.cpp  Color.h  Cuadrado.cpp  Cuadrado.h  Geometria.h  Triangulo.cpp  Triangulo.h  main.cpp
U00_Repaso/Ej-02/: Calculadora.cpp  Calculadora.h  main.cpp
U00_Repaso/Ej-03/: Calculadora.h  main.cpp
U00_Repaso/Ej-04/: main.cpp
U00_Repaso/Ej-05/: Entero.cpp  Entero.h  main.cpp
U00_Repaso/Ej-06/: main.cpp
U01_Recursividad/Ej-01/: main.cpp  potencia.cpp
U01_Recursividad/Ej-02/: main.cpp  sumatoria.cpp
U01_Recursividad/Ej-03/: ackerman.cpp  main.cpp
U01_Recursividad/Ej-04/: main.cpp  mcd.cpp
U01_Recursividad/Ej-05/: digitos.cpp  main.cpp
U02_Listas/Ej-01/: fnInvierte.h  main.cpp
U02_Listas/Ej-02/: main.cpp
U02_Listas/Ej-03/: main.cpp
U02_Listas/Ej-04/: main.cpp  union.h
U02_Listas/Ej-05/: CircList.h  main.cpp  nodo.h
U02_Listas/Ej-06/: main.cpp
U02_Listas/Lista/: Lista.h  nodo.h
U03_Pilas/Ej-01/: main.cpp
U03_Pilas/Ej-02/: main.cpp
U03_Pilas/Ej-03/: main.cpp
U03_Pilas/Ej-04/: main.cpp
U03_Pilas/Ej-05/: main.cpp
U03_Pilas/Pila/: Pila.h  nodo.h
U04_Colas/Cola/: Cola.h  nodo.h
U04_Colas/Ej-01/: main.cpp
U04_Colas/Ej-02/: main.cpp
U04_Colas/Ej-03/: main.cpp
U04_Colas/Ej-04/: ColaPrioridades.h  main.cpp  nodo.h  productos.txt
U05_Hash/Ej-01/: main.cpp
U05_Hash/Ej-02/: HashMap.h  main.cpp
U05_Hash/Ej-03/: HashMap.h  main.cpp
U05_Hash/HashMap/: HashMap.h
U06_Arbol/Arbol/: ArbolBinario.h  NodoArbol.h
U06_Arbol/Ej-01/: main.cpp
U06_Arbol/Ej-02/: main.cpp
U06_Arbol/Ej-03/: main.cpp
U06_Arbol/Ej-04/: main.cpp
U08_Ordenamiento/Ej-01/: main.cpp
U08_Ordenamiento/Ej-02/: main.cpp
U08_Ordenamiento/Ej-03/: main.cpp
U08_Ordenamiento/Ej-04/: main.cpp
